# DiskFileManager

./: .gitignore  DiskFileManager.sln  LICENSE
DiskFileManager/: Archive.cs  ArchiveOperations.cs  DatabaseHelper.cs  DiskFileManager.csproj  FileIdentity.cs  FileOperations.cs  HashUtil.cs  Program.cs  Sha256Hash.cs  SqliteUtil.cs  StorageFile.cs  Util.cs  Volume.cs  VolumeOperations.cs  Win32Util.cs
DiskFileManager/Properties/: AssemblyInfo.cs
TotalCmd-WCX/: .clang-format  CMakeLists.txt  CMakeSettings.json  archive.cpp  archive.hpp  plugin.cpp  wrapper.cpp
TotalCmd-WCX/totalcmd/: functions.h  wcxhead.h
